# raspberry-pi-3_embedded-linux

./: README.md  build.sh  run-emu.sh  setup-env.sh
config/: rpi3_config
utils/: qemu-system-aarch64  qemu-system-arm
utils/scripts/: ARRIS-C502.conf  CMakeLists.txt  S11fbcp  S80dnsmasq  S80hostapd  config-35.txt  dhcpcd.conf  hostapd.conf  interfaces  interfaces-hotspot  interfaces-wifi
